--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     environment {
     BUILD = "${env.BUILD_NUMBER}"
+    BUILD_PREV = "${env.BUILD_NUMBER.toInteger() - 1}"
     SLACK_TOKEN = credentials('slack-token')
     }
     stages {
@@ -45,13 +46,22 @@ pipeline {
         stage('Test site by Apache Bench') {
             steps {
             script {
+                 try {
             sh """
-                       		ab -n 100 -c 10 -r http://127.0.0.1:5000/ > project.txt
+                       		ab -n 100 -c 10 -r http://127.0.0.1:50000/ > project.txt
                        		curl -F file=@project.txt -F channels=CLBKQPFB5 -F token=${env.SLACK_TOKEN} https://slack.com/api/files.upload
 		                """
             }
+        catch (exc) {
+            env BUILD = $BUILD_PREV
+            sh """
+                       		docker-compose down
+							docker-compose up -d
+                """
+            }    
             }
         }
+            }
         }
     post {
             success {
